--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
   "python.analysis.extraPaths": ["./", "./app"],
-  "python.defaultInterpreterPath": "anu_venv/Scripts/python.exe"
+  "python.defaultInterpreterPath": "anu_venv/Scripts/python.exe",
+  "python.envFile": "${workspaceFolder}/.env"
+
 }
